lab7/y.output
Terminals unused in grammar

    '|'
    '&'
    '%'
    UMINUS


Grammar

    0 $accept: Program $end

    1 Program: Declarationlist

    2 Declarationlist: Declaration
    3                | Declaration Declarationlist

    4 Declaration: VarDeclaration
    5            | FunDeclaration

    6 VarDeclaration: TypeSpecifier VarList ';'

    7 VarList: T_ID
    8        | T_ID '[' T_NUM ']'
    9        | T_ID ',' VarList
   10        | T_ID '[' T_NUM ']' ',' VarList

   11 TypeSpecifier: T_INT
   12              | T_VOID
   13              | T_BOOLEAN

   14 $@1: ε

   15 $@2: ε

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 Params ')' $@2 CompoundStmt

   17 Params: T_VOID
   18       | ParamList

   19 ParamList: Param
   20          | Param ',' ParamList

   21 Param: TypeSpecifier T_ID
   22      | TypeSpecifier T_ID '[' ']'

   23 $@3: ε

   24 CompoundStmt: T_BEGIN $@3 LocalDeclarations StatementList T_END

   25 LocalDeclarations: ε
   26                  | VarDeclaration LocalDeclarations

   27 StatementList: ε
   28              | Statement StatementList

   29 Statement: ExpressionStmt
   30          | CompoundStmt
   31          | SelectionStmt
   32          | IterationStmt
   33          | AssignmentStmt
   34          | ReturnStmt
   35          | ReadStmt
   36          | WriteStmt

   37 ExpressionStmt: Expression ';'
   38               | ';'

   39 SelectionStmt: T_IF Expression T_THEN Statement T_ENDIF
   40              | T_IF Expression T_THEN Statement T_ELSE Statement T_ENDIF

   41 IterationStmt: T_WHILE Expression T_DO Statement

   42 ReturnStmt: T_RETURN ';'
   43           | T_RETURN Expression ';'

   44 ReadStmt: T_READ Var ';'

   45 WriteStmt: T_WRITE Expression ';'
   46          | T_WRITE T_STRING ';'

   47 AssignmentStmt: Var '=' SimpleExpression ';'

   48 Expression: SimpleExpression

   49 Var: T_ID
   50    | T_ID '[' Expression ']'

   51 SimpleExpression: AdditiveExpression
   52                 | SimpleExpression Relop AdditiveExpression

   53 Relop: T_LE
   54      | '<'
   55      | '>'
   56      | T_GE
   57      | T_EQ
   58      | T_NE

   59 AdditiveExpression: Term
   60                   | AdditiveExpression Addop Term

   61 Addop: '+'
   62      | '-'

   63 Term: Factor
   64     | Term Multop Factor

   65 Multop: '*'
   66       | '/'
   67       | T_AND
   68       | T_OR

   69 Factor: '(' Expression ')'
   70       | T_NUM
   71       | Var
   72       | Call
   73       | T_TRUE
   74       | T_FALSE
   75       | T_NOT Factor

   76 Call: T_ID '(' Args ')'

   77 Args: ε
   78     | ArgList

   79 ArgList: Expression
   80        | Expression ',' ArgList


Terminals, with rules where they appear

    $end (0) 0
    '%' (37)
    '&' (38)
    '(' (40) 16 69 76
    ')' (41) 16 69 76
    '*' (42) 65
    '+' (43) 61
    ',' (44) 9 10 20 80
    '-' (45) 62
    '/' (47) 66
    ';' (59) 6 37 38 42 43 44 45 46 47
    '<' (60) 54
    '=' (61) 47
    '>' (62) 55
    '[' (91) 8 10 22 50
    ']' (93) 8 10 22 50
    '|' (124)
    error (256)
    T_NUM <num> (258) 8 10 70
    T_ID <string> (259) 7 8 9 10 16 21 22 49 50 76
    T_STRING <string> (260) 46
    T_INT (261) 11
    T_VOID (262) 12 17
    T_BOOLEAN (263) 13
    T_BEGIN (264) 24
    T_END (265) 24
    T_RETURN (266) 42 43
    T_READ (267) 44
    T_WRITE (268) 45 46
    T_LE (269) 53
    T_GE (270) 56
    T_EQ (271) 57
    T_NE (272) 58
    T_AND (273) 67
    T_OR (274) 68
    T_NOT (275) 75
    T_IF (276) 39 40
    T_THEN (277) 39 40
    T_ELSE (278) 40
    T_ENDIF (279) 39 40
    T_WHILE (280) 41
    T_DO (281) 41
    T_TRUE (282) 73
    T_FALSE (283) 74
    UMINUS (284)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    Program (47)
        on left: 1
        on right: 0
    Declarationlist <node> (48)
        on left: 2 3
        on right: 1 3
    Declaration <node> (49)
        on left: 4 5
        on right: 2 3
    VarDeclaration <node> (50)
        on left: 6
        on right: 4 26
    VarList <node> (51)
        on left: 7 8 9 10
        on right: 6 9 10
    TypeSpecifier <datatype> (52)
        on left: 11 12 13
        on right: 6 16 21 22
    FunDeclaration <node> (53)
        on left: 16
        on right: 5
    $@1 (54)
        on left: 14
        on right: 16
    $@2 (55)
        on left: 15
        on right: 16
    Params <node> (56)
        on left: 17 18
        on right: 16
    ParamList <node> (57)
        on left: 19 20
        on right: 18 20
    Param <node> (58)
        on left: 21 22
        on right: 19 20
    CompoundStmt <node> (59)
        on left: 24
        on right: 16 30
    $@3 (60)
        on left: 23
        on right: 24
    LocalDeclarations <node> (61)
        on left: 25 26
        on right: 24 26
    StatementList <node> (62)
        on left: 27 28
        on right: 24 28
    Statement <node> (63)
        on left: 29 30 31 32 33 34 35 36
        on right: 28 39 40 41
    ExpressionStmt <node> (64)
        on left: 37 38
        on right: 29
    SelectionStmt <node> (65)
        on left: 39 40
        on right: 31
    IterationStmt <node> (66)
        on left: 41
        on right: 32
    ReturnStmt <node> (67)
        on left: 42 43
        on right: 34
    ReadStmt <node> (68)
        on left: 44
        on right: 35
    WriteStmt <node> (69)
        on left: 45 46
        on right: 36
    AssignmentStmt <node> (70)
        on left: 47
        on right: 33
    Expression <node> (71)
        on left: 48
        on right: 37 39 40 41 43 45 50 69 79 80
    Var <node> (72)
        on left: 49 50
        on right: 44 47 71
    SimpleExpression <node> (73)
        on left: 51 52
        on right: 47 48 52
    Relop <operator> (74)
        on left: 53 54 55 56 57 58
        on right: 52
    AdditiveExpression <node> (75)
        on left: 59 60
        on right: 51 52 60
    Addop <operator> (76)
        on left: 61 62
        on right: 60
    Term <node> (77)
        on left: 63 64
        on right: 59 60 64
    Multop <operator> (78)
        on left: 65 66 67 68
        on right: 64
    Factor <node> (79)
        on left: 69 70 71 72 73 74 75
        on right: 63 64 75
    Call <node> (80)
        on left: 76
        on right: 72
    Args <node> (81)
        on left: 77 78
        on right: 76
    ArgList <node> (82)
        on left: 79 80
        on right: 78 80


State 0

    0 $accept: • Program $end

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    Program          go to state 4
    Declarationlist  go to state 5
    Declaration      go to state 6
    VarDeclaration   go to state 7
    TypeSpecifier    go to state 8
    FunDeclaration   go to state 9


State 1

   11 TypeSpecifier: T_INT •

    $default  reduce using rule 11 (TypeSpecifier)


State 2

   12 TypeSpecifier: T_VOID •

    $default  reduce using rule 12 (TypeSpecifier)


State 3

   13 TypeSpecifier: T_BOOLEAN •

    $default  reduce using rule 13 (TypeSpecifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 5

    1 Program: Declarationlist •

    $default  reduce using rule 1 (Program)


State 6

    2 Declarationlist: Declaration •
    3                | Declaration • Declarationlist

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 2 (Declarationlist)

    Declarationlist  go to state 11
    Declaration      go to state 6
    VarDeclaration   go to state 7
    TypeSpecifier    go to state 8
    FunDeclaration   go to state 9


State 7

    4 Declaration: VarDeclaration •

    $default  reduce using rule 4 (Declaration)


State 8

    6 VarDeclaration: TypeSpecifier • VarList ';'
   16 FunDeclaration: TypeSpecifier • T_ID '(' $@1 Params ')' $@2 CompoundStmt

    T_ID  shift, and go to state 12

    VarList  go to state 13


State 9

    5 Declaration: FunDeclaration •

    $default  reduce using rule 5 (Declaration)


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    3 Declarationlist: Declaration Declarationlist •

    $default  reduce using rule 3 (Declarationlist)


State 12

    7 VarList: T_ID •
    8        | T_ID • '[' T_NUM ']'
    9        | T_ID • ',' VarList
   10        | T_ID • '[' T_NUM ']' ',' VarList
   16 FunDeclaration: TypeSpecifier T_ID • '(' $@1 Params ')' $@2 CompoundStmt

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 7 (VarList)


State 13

    6 VarDeclaration: TypeSpecifier VarList • ';'

    ';'  shift, and go to state 17


State 14

    8 VarList: T_ID '[' • T_NUM ']'
   10        | T_ID '[' • T_NUM ']' ',' VarList

    T_NUM  shift, and go to state 18


State 15

    9 VarList: T_ID ',' • VarList

    T_ID  shift, and go to state 19

    VarList  go to state 20


State 16

   16 FunDeclaration: TypeSpecifier T_ID '(' • $@1 Params ')' $@2 CompoundStmt

    $default  reduce using rule 14 ($@1)

    $@1  go to state 21


State 17

    6 VarDeclaration: TypeSpecifier VarList ';' •

    $default  reduce using rule 6 (VarDeclaration)


State 18

    8 VarList: T_ID '[' T_NUM • ']'
   10        | T_ID '[' T_NUM • ']' ',' VarList

    ']'  shift, and go to state 22


State 19

    7 VarList: T_ID •
    8        | T_ID • '[' T_NUM ']'
    9        | T_ID • ',' VarList
   10        | T_ID • '[' T_NUM ']' ',' VarList

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 7 (VarList)


State 20

    9 VarList: T_ID ',' VarList •

    $default  reduce using rule 9 (VarList)


State 21

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 • Params ')' $@2 CompoundStmt

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 23
    T_BOOLEAN  shift, and go to state 3

    TypeSpecifier  go to state 24
    Params         go to state 25
    ParamList      go to state 26
    Param          go to state 27


State 22

    8 VarList: T_ID '[' T_NUM ']' •
   10        | T_ID '[' T_NUM ']' • ',' VarList

    ','  shift, and go to state 28

    $default  reduce using rule 8 (VarList)


State 23

   12 TypeSpecifier: T_VOID •
   17 Params: T_VOID •

    ')'       reduce using rule 17 (Params)
    $default  reduce using rule 12 (TypeSpecifier)


State 24

   21 Param: TypeSpecifier • T_ID
   22      | TypeSpecifier • T_ID '[' ']'

    T_ID  shift, and go to state 29


State 25

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 Params • ')' $@2 CompoundStmt

    ')'  shift, and go to state 30


State 26

   18 Params: ParamList •

    $default  reduce using rule 18 (Params)


State 27

   19 ParamList: Param •
   20          | Param • ',' ParamList

    ','  shift, and go to state 31

    $default  reduce using rule 19 (ParamList)


State 28

   10 VarList: T_ID '[' T_NUM ']' ',' • VarList

    T_ID  shift, and go to state 19

    VarList  go to state 32


State 29

   21 Param: TypeSpecifier T_ID •
   22      | TypeSpecifier T_ID • '[' ']'

    '['  shift, and go to state 33

    $default  reduce using rule 21 (Param)


State 30

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 Params ')' • $@2 CompoundStmt

    $default  reduce using rule 15 ($@2)

    $@2  go to state 34


State 31

   20 ParamList: Param ',' • ParamList

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    TypeSpecifier  go to state 24
    ParamList      go to state 35
    Param          go to state 27


State 32

   10 VarList: T_ID '[' T_NUM ']' ',' VarList •

    $default  reduce using rule 10 (VarList)


State 33

   22 Param: TypeSpecifier T_ID '[' • ']'

    ']'  shift, and go to state 36


State 34

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 Params ')' $@2 • CompoundStmt

    T_BEGIN  shift, and go to state 37

    CompoundStmt  go to state 38


State 35

   20 ParamList: Param ',' ParamList •

    $default  reduce using rule 20 (ParamList)


State 36

   22 Param: TypeSpecifier T_ID '[' ']' •

    $default  reduce using rule 22 (Param)


State 37

   24 CompoundStmt: T_BEGIN • $@3 LocalDeclarations StatementList T_END

    $default  reduce using rule 23 ($@3)

    $@3  go to state 39


State 38

   16 FunDeclaration: TypeSpecifier T_ID '(' $@1 Params ')' $@2 CompoundStmt •

    $default  reduce using rule 16 (FunDeclaration)


State 39

   24 CompoundStmt: T_BEGIN $@3 • LocalDeclarations StatementList T_END

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 25 (LocalDeclarations)

    VarDeclaration     go to state 40
    TypeSpecifier      go to state 41
    LocalDeclarations  go to state 42


State 40

   26 LocalDeclarations: VarDeclaration • LocalDeclarations

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 25 (LocalDeclarations)

    VarDeclaration     go to state 40
    TypeSpecifier      go to state 41
    LocalDeclarations  go to state 43


State 41

    6 VarDeclaration: TypeSpecifier • VarList ';'

    T_ID  shift, and go to state 19

    VarList  go to state 13


State 42

   24 CompoundStmt: T_BEGIN $@3 LocalDeclarations • StatementList T_END

    T_NUM     shift, and go to state 44
    T_ID      shift, and go to state 45
    T_BEGIN   shift, and go to state 37
    T_RETURN  shift, and go to state 46
    T_READ    shift, and go to state 47
    T_WRITE   shift, and go to state 48
    T_NOT     shift, and go to state 49
    T_IF      shift, and go to state 50
    T_WHILE   shift, and go to state 51
    T_TRUE    shift, and go to state 52
    T_FALSE   shift, and go to state 53
    ';'       shift, and go to state 54
    '('       shift, and go to state 55

    $default  reduce using rule 27 (StatementList)

    CompoundStmt        go to state 56
    StatementList       go to state 57
    Statement           go to state 58
    ExpressionStmt      go to state 59
    SelectionStmt       go to state 60
    IterationStmt       go to state 61
    ReturnStmt          go to state 62
    ReadStmt            go to state 63
    WriteStmt           go to state 64
    AssignmentStmt      go to state 65
    Expression          go to state 66
    Var                 go to state 67
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 43

   26 LocalDeclarations: VarDeclaration LocalDeclarations •

    $default  reduce using rule 26 (LocalDeclarations)


State 44

   70 Factor: T_NUM •

    $default  reduce using rule 70 (Factor)


State 45

   49 Var: T_ID •
   50    | T_ID • '[' Expression ']'
   76 Call: T_ID • '(' Args ')'

    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 49 (Var)


State 46

   42 ReturnStmt: T_RETURN • ';'
   43           | T_RETURN • Expression ';'

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    ';'      shift, and go to state 75
    '('      shift, and go to state 55

    Expression          go to state 76
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 47

   44 ReadStmt: T_READ • Var ';'

    T_ID  shift, and go to state 78

    Var  go to state 79


State 48

   45 WriteStmt: T_WRITE • Expression ';'
   46          | T_WRITE • T_STRING ';'

    T_NUM     shift, and go to state 44
    T_ID      shift, and go to state 45
    T_STRING  shift, and go to state 80
    T_NOT     shift, and go to state 49
    T_TRUE    shift, and go to state 52
    T_FALSE   shift, and go to state 53
    '('       shift, and go to state 55

    Expression          go to state 81
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 49

   75 Factor: T_NOT • Factor

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Var     go to state 77
    Factor  go to state 82
    Call    go to state 72


State 50

   39 SelectionStmt: T_IF • Expression T_THEN Statement T_ENDIF
   40              | T_IF • Expression T_THEN Statement T_ELSE Statement T_ENDIF

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Expression          go to state 83
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 51

   41 IterationStmt: T_WHILE • Expression T_DO Statement

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Expression          go to state 84
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 52

   73 Factor: T_TRUE •

    $default  reduce using rule 73 (Factor)


State 53

   74 Factor: T_FALSE •

    $default  reduce using rule 74 (Factor)


State 54

   38 ExpressionStmt: ';' •

    $default  reduce using rule 38 (ExpressionStmt)


State 55

   69 Factor: '(' • Expression ')'

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Expression          go to state 85
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 56

   30 Statement: CompoundStmt •

    $default  reduce using rule 30 (Statement)


State 57

   24 CompoundStmt: T_BEGIN $@3 LocalDeclarations StatementList • T_END

    T_END  shift, and go to state 86


State 58

   28 StatementList: Statement • StatementList

    T_NUM     shift, and go to state 44
    T_ID      shift, and go to state 45
    T_BEGIN   shift, and go to state 37
    T_RETURN  shift, and go to state 46
    T_READ    shift, and go to state 47
    T_WRITE   shift, and go to state 48
    T_NOT     shift, and go to state 49
    T_IF      shift, and go to state 50
    T_WHILE   shift, and go to state 51
    T_TRUE    shift, and go to state 52
    T_FALSE   shift, and go to state 53
    ';'       shift, and go to state 54
    '('       shift, and go to state 55

    $default  reduce using rule 27 (StatementList)

    CompoundStmt        go to state 56
    StatementList       go to state 87
    Statement           go to state 58
    ExpressionStmt      go to state 59
    SelectionStmt       go to state 60
    IterationStmt       go to state 61
    ReturnStmt          go to state 62
    ReadStmt            go to state 63
    WriteStmt           go to state 64
    AssignmentStmt      go to state 65
    Expression          go to state 66
    Var                 go to state 67
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 59

   29 Statement: ExpressionStmt •

    $default  reduce using rule 29 (Statement)


State 60

   31 Statement: SelectionStmt •

    $default  reduce using rule 31 (Statement)


State 61

   32 Statement: IterationStmt •

    $default  reduce using rule 32 (Statement)


State 62

   34 Statement: ReturnStmt •

    $default  reduce using rule 34 (Statement)


State 63

   35 Statement: ReadStmt •

    $default  reduce using rule 35 (Statement)


State 64

   36 Statement: WriteStmt •

    $default  reduce using rule 36 (Statement)


State 65

   33 Statement: AssignmentStmt •

    $default  reduce using rule 33 (Statement)


State 66

   37 ExpressionStmt: Expression • ';'

    ';'  shift, and go to state 88


State 67

   47 AssignmentStmt: Var • '=' SimpleExpression ';'
   71 Factor: Var •

    '='  shift, and go to state 89

    $default  reduce using rule 71 (Factor)


State 68

   48 Expression: SimpleExpression •
   52 SimpleExpression: SimpleExpression • Relop AdditiveExpression

    T_LE  shift, and go to state 90
    T_GE  shift, and go to state 91
    T_EQ  shift, and go to state 92
    T_NE  shift, and go to state 93
    '<'   shift, and go to state 94
    '>'   shift, and go to state 95

    $default  reduce using rule 48 (Expression)

    Relop  go to state 96


State 69

   51 SimpleExpression: AdditiveExpression •
   60 AdditiveExpression: AdditiveExpression • Addop Term

    '+'  shift, and go to state 97
    '-'  shift, and go to state 98

    $default  reduce using rule 51 (SimpleExpression)

    Addop  go to state 99


State 70

   59 AdditiveExpression: Term •
   64 Term: Term • Multop Factor

    T_AND  shift, and go to state 100
    T_OR   shift, and go to state 101
    '*'    shift, and go to state 102
    '/'    shift, and go to state 103

    $default  reduce using rule 59 (AdditiveExpression)

    Multop  go to state 104


State 71

   63 Term: Factor •

    $default  reduce using rule 63 (Term)


State 72

   72 Factor: Call •

    $default  reduce using rule 72 (Factor)


State 73

   50 Var: T_ID '[' • Expression ']'

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Expression          go to state 105
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 74

   76 Call: T_ID '(' • Args ')'

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    $default  reduce using rule 77 (Args)

    Expression          go to state 106
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72
    Args                go to state 107
    ArgList             go to state 108


State 75

   42 ReturnStmt: T_RETURN ';' •

    $default  reduce using rule 42 (ReturnStmt)


State 76

   43 ReturnStmt: T_RETURN Expression • ';'

    ';'  shift, and go to state 109


State 77

   71 Factor: Var •

    $default  reduce using rule 71 (Factor)


State 78

   49 Var: T_ID •
   50    | T_ID • '[' Expression ']'

    '['  shift, and go to state 73

    $default  reduce using rule 49 (Var)


State 79

   44 ReadStmt: T_READ Var • ';'

    ';'  shift, and go to state 110


State 80

   46 WriteStmt: T_WRITE T_STRING • ';'

    ';'  shift, and go to state 111


State 81

   45 WriteStmt: T_WRITE Expression • ';'

    ';'  shift, and go to state 112


State 82

   75 Factor: T_NOT Factor •

    $default  reduce using rule 75 (Factor)


State 83

   39 SelectionStmt: T_IF Expression • T_THEN Statement T_ENDIF
   40              | T_IF Expression • T_THEN Statement T_ELSE Statement T_ENDIF

    T_THEN  shift, and go to state 113


State 84

   41 IterationStmt: T_WHILE Expression • T_DO Statement

    T_DO  shift, and go to state 114


State 85

   69 Factor: '(' Expression • ')'

    ')'  shift, and go to state 115


State 86

   24 CompoundStmt: T_BEGIN $@3 LocalDeclarations StatementList T_END •

    $default  reduce using rule 24 (CompoundStmt)


State 87

   28 StatementList: Statement StatementList •

    $default  reduce using rule 28 (StatementList)


State 88

   37 ExpressionStmt: Expression ';' •

    $default  reduce using rule 37 (ExpressionStmt)


State 89

   47 AssignmentStmt: Var '=' • SimpleExpression ';'

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Var                 go to state 77
    SimpleExpression    go to state 116
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 90

   53 Relop: T_LE •

    $default  reduce using rule 53 (Relop)


State 91

   56 Relop: T_GE •

    $default  reduce using rule 56 (Relop)


State 92

   57 Relop: T_EQ •

    $default  reduce using rule 57 (Relop)


State 93

   58 Relop: T_NE •

    $default  reduce using rule 58 (Relop)


State 94

   54 Relop: '<' •

    $default  reduce using rule 54 (Relop)


State 95

   55 Relop: '>' •

    $default  reduce using rule 55 (Relop)


State 96

   52 SimpleExpression: SimpleExpression Relop • AdditiveExpression

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Var                 go to state 77
    AdditiveExpression  go to state 117
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 97

   61 Addop: '+' •

    $default  reduce using rule 61 (Addop)


State 98

   62 Addop: '-' •

    $default  reduce using rule 62 (Addop)


State 99

   60 AdditiveExpression: AdditiveExpression Addop • Term

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Var     go to state 77
    Term    go to state 118
    Factor  go to state 71
    Call    go to state 72


State 100

   67 Multop: T_AND •

    $default  reduce using rule 67 (Multop)


State 101

   68 Multop: T_OR •

    $default  reduce using rule 68 (Multop)


State 102

   65 Multop: '*' •

    $default  reduce using rule 65 (Multop)


State 103

   66 Multop: '/' •

    $default  reduce using rule 66 (Multop)


State 104

   64 Term: Term Multop • Factor

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Var     go to state 77
    Factor  go to state 119
    Call    go to state 72


State 105

   50 Var: T_ID '[' Expression • ']'

    ']'  shift, and go to state 120


State 106

   79 ArgList: Expression •
   80        | Expression • ',' ArgList

    ','  shift, and go to state 121

    $default  reduce using rule 79 (ArgList)


State 107

   76 Call: T_ID '(' Args • ')'

    ')'  shift, and go to state 122


State 108

   78 Args: ArgList •

    $default  reduce using rule 78 (Args)


State 109

   43 ReturnStmt: T_RETURN Expression ';' •

    $default  reduce using rule 43 (ReturnStmt)


State 110

   44 ReadStmt: T_READ Var ';' •

    $default  reduce using rule 44 (ReadStmt)


State 111

   46 WriteStmt: T_WRITE T_STRING ';' •

    $default  reduce using rule 46 (WriteStmt)


State 112

   45 WriteStmt: T_WRITE Expression ';' •

    $default  reduce using rule 45 (WriteStmt)


State 113

   39 SelectionStmt: T_IF Expression T_THEN • Statement T_ENDIF
   40              | T_IF Expression T_THEN • Statement T_ELSE Statement T_ENDIF

    T_NUM     shift, and go to state 44
    T_ID      shift, and go to state 45
    T_BEGIN   shift, and go to state 37
    T_RETURN  shift, and go to state 46
    T_READ    shift, and go to state 47
    T_WRITE   shift, and go to state 48
    T_NOT     shift, and go to state 49
    T_IF      shift, and go to state 50
    T_WHILE   shift, and go to state 51
    T_TRUE    shift, and go to state 52
    T_FALSE   shift, and go to state 53
    ';'       shift, and go to state 54
    '('       shift, and go to state 55

    CompoundStmt        go to state 56
    Statement           go to state 123
    ExpressionStmt      go to state 59
    SelectionStmt       go to state 60
    IterationStmt       go to state 61
    ReturnStmt          go to state 62
    ReadStmt            go to state 63
    WriteStmt           go to state 64
    AssignmentStmt      go to state 65
    Expression          go to state 66
    Var                 go to state 67
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 114

   41 IterationStmt: T_WHILE Expression T_DO • Statement

    T_NUM     shift, and go to state 44
    T_ID      shift, and go to state 45
    T_BEGIN   shift, and go to state 37
    T_RETURN  shift, and go to state 46
    T_READ    shift, and go to state 47
    T_WRITE   shift, and go to state 48
    T_NOT     shift, and go to state 49
    T_IF      shift, and go to state 50
    T_WHILE   shift, and go to state 51
    T_TRUE    shift, and go to state 52
    T_FALSE   shift, and go to state 53
    ';'       shift, and go to state 54
    '('       shift, and go to state 55

    CompoundStmt        go to state 56
    Statement           go to state 124
    ExpressionStmt      go to state 59
    SelectionStmt       go to state 60
    IterationStmt       go to state 61
    ReturnStmt          go to state 62
    ReadStmt            go to state 63
    WriteStmt           go to state 64
    AssignmentStmt      go to state 65
    Expression          go to state 66
    Var                 go to state 67
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72


State 115

   69 Factor: '(' Expression ')' •

    $default  reduce using rule 69 (Factor)


State 116

   47 AssignmentStmt: Var '=' SimpleExpression • ';'
   52 SimpleExpression: SimpleExpression • Relop AdditiveExpression

    T_LE  shift, and go to state 90
    T_GE  shift, and go to state 91
    T_EQ  shift, and go to state 92
    T_NE  shift, and go to state 93
    ';'   shift, and go to state 125
    '<'   shift, and go to state 94
    '>'   shift, and go to state 95

    Relop  go to state 96


State 117

   52 SimpleExpression: SimpleExpression Relop AdditiveExpression •
   60 AdditiveExpression: AdditiveExpression • Addop Term

    '+'  shift, and go to state 97
    '-'  shift, and go to state 98

    $default  reduce using rule 52 (SimpleExpression)

    Addop  go to state 99


State 118

   60 AdditiveExpression: AdditiveExpression Addop Term •
   64 Term: Term • Multop Factor

    T_AND  shift, and go to state 100
    T_OR   shift, and go to state 101
    '*'    shift, and go to state 102
    '/'    shift, and go to state 103

    $default  reduce using rule 60 (AdditiveExpression)

    Multop  go to state 104


State 119

   64 Term: Term Multop Factor •

    $default  reduce using rule 64 (Term)


State 120

   50 Var: T_ID '[' Expression ']' •

    $default  reduce using rule 50 (Var)


State 121

   80 ArgList: Expression ',' • ArgList

    T_NUM    shift, and go to state 44
    T_ID     shift, and go to state 45
    T_NOT    shift, and go to state 49
    T_TRUE   shift, and go to state 52
    T_FALSE  shift, and go to state 53
    '('      shift, and go to state 55

    Expression          go to state 106
    Var                 go to state 77
    SimpleExpression    go to state 68
    AdditiveExpression  go to state 69
    Term                go to state 70
    Factor              go to state 71
    Call                go to state 72
    ArgList             go to state 126


State 122

   76 Call: T_ID '(' Args ')' •

    $default  reduce using rule 76 (Call)


State 123

   39 SelectionStmt: T_IF Expression T_THEN Statement • T_ENDIF
   40              | T_IF Expression T_THEN Statement • T_ELSE Statement T_ENDIF

    T_ELSE   shift, and go to state 127
    T_ENDIF  shift, and go to state 128


State 124

   41 IterationStmt: T_WHILE Expression T_DO Statement •

    $default  reduce using rule 41 (IterationStmt)


State 125

   47 AssignmentStmt: Var '=' SimpleExpression ';' •

    $default  reduce using rule 47 (AssignmentStmt)


State 126

   80 ArgList: Expression ',' ArgList •

    $default  reduce using rule 80 (ArgList)


State 127

   40 SelectionStmt: T_IF Expression T_THEN Statement T_ELSE • Statement T_ENDIF
